corrijo error ruta absoluta por relativa

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+    <script src="socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
