--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container mx-auto">
-        <h1 class="text-3xl font-bold text-center mt-8">Chat en Vivo Pescar</h1>
+        <h1 class="text-3xl font-bold text-center mt-8">Chat en Vivo</h1>
         <hr class="my-4 border-t-5 border-gray-300">
 
         <h2 class="text-2xl font-semibold text-center mt-6">Formulario de chat</h2>
